[tool.poetry]
name = "ps2_census"
version = "0.13.0"
description = "Daybreak Games Census API client for Planetside 2 (UNOFFICIAL)"

license = "MIT"

authors = [
    "Sylvain Pascou <sylvain@pascou.net>"
]

readme = "README.md"

repository = "https://github.com/spascou/ps2-census"
homepage = "https://github.com/spascou/ps2-census"

keywords = []

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.9"
requests = "^2.23"
websockets = "^8.1"
tenacity = "^6.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7"
flake8-bugbear = "^20.1"
isort = "^4.3"
jedi = "^0.17"
mypy = "^0.770"
pytest = "^5.4"
pytest-asyncio = "^0.12"
pytest-cov = "^2.8"
pytest-flake8 = "^1.0"
ipython = "^7.13"
coverage-badge = "^1.0"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
